--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <div class="card">
       <h3 class="name">Creadit Card</h3>
-      <img src="img/chip2.png" alt="chip" class="chip" />
-      <img src="img/contactless.png" alt="nfc" class="nfc" />
+      <img src="chip2.png" alt="chip" class="chip" />
+      <img src="contactless.png" alt="nfc" class="nfc" />
       <h3 class="number">5500 0055 5500 0055</h3>
       <h3 class="card-holder"><span>Card holder</span> <br />Thao Nguyen</h3>
       <h5 class="valid"><span>Expiry date</span><br />12/2029</h5>
-      <img src="img/visa.png" alt="visa" class="logo" />
+      <img src="visa.png" alt="visa" class="logo" />
     </div>
   </body>
 </html>
